data/all_generated_tests/raw_wast_tests/br_table_IncorrectBranchTargetResolution_2054.wast
;; 4. **Test Description**: Incorrectly encoded immediate parameters (vector of label indices) in the `br_table`, testing if implantation misinterprets these parameters, triggering incorrect branch target resolution and potential traps.

(assert_invalid
  (module (func $incorrect-immediate
    (block (br_table 0x10000001 0 (i32.const 1)))
  ))
  "unknown label"
)